--- a/css/style.scss
+++ b/css/style.scss
@@ -85,11 +85,28 @@ body {
       display: flex;
       align-items: center;
       #header_bot_findAMedicine {
+        position: relative;
         background-color: #403b77;
+        color: white;
         width: 200px;
         height: 40px;
         border-radius: 20px;
         margin-right: 10px;
+        cursor: pointer;
+        span {
+          position: absolute;
+          left: 15%;
+          top: 50%;
+          display: inline-block;
+          transform: translateY(-50%);
+          &:after {
+            content: "\002193";
+            position: absolute;
+            display: inline-block;
+            left: 130px;
+            bottom: 2px;
+          }
+        }
       }
 
       #header_bot_getInTouch {
@@ -97,13 +114,16 @@ body {
         border-radius: 30px;
         width: 155px;
         height: 50px;
+        cursor: pointer;
       }
+
       #header_bot_search {
         position: relative;
         background: url(/images/loupe.png) no-repeat center/cover;
         width: 30px;
         height: 30px;
         margin-left: 10px;
+        cursor: pointer;
       }
     }
   }
@@ -113,4 +133,32 @@ body {
   position: absolute;
   top: 145px;
   width: 100%;
+}
+
+.sousSlider {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  border: 1px solid black;
+  width: 600px;
+  height: 150px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 675px;
+  z-index: 9;
+  .sousSlider_L {
+    height: 100%;
+    width: 200px;
+  }
+  .sousSlider_M {
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    height: 100%;
+    width: 200px;
+  }
+  .sousSlider_R {
+    height: 100%;
+    width: 200px;
+  }
 }
