--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap");
+@import url("https://use.typekit.net/mwf7moh.css");
 * {
   margin: 0;
   padding: 0;
@@ -36,12 +37,18 @@ input {
   justify-content: space-between;
 }
 #header #header_top .header_top_country {
-  margin: 13px 0 0 10px;
+  margin: 13px 0 0 20px;
   color: white;
   background-color: #064242;
   height: 30px;
 }
 #header #header_top .header_top_country span {
+  margin-left: 5px;
+}
+#header #header_top .header_top_country span a {
+  color: white;
+}
+#header #header_top .header_top_country .fa-angle-down {
   margin-left: 5px;
 }
 #header #header_top .header_top_menuLeft {
@@ -55,6 +62,11 @@ input {
   font-size: 12px;
   display: inline;
   color: white;
+}
+#header #header_top .header_top_menuLeft .fa-angle-down {
+  position: relative;
+  display: inline;
+  margin-left: 5px;
 }
 #header #header_bot {
   background-color: white;
@@ -76,6 +88,12 @@ input {
   text-align: center;
   padding-right: 40px;
 }
+#header #header_bot #header_bot_menuMiddle li a {
+  padding-bottom: 41px;
+}
+#header #header_bot #header_bot_menuMiddle li a:hover {
+  border-bottom: 3px solid #8cdb1f;
+}
 #header #header_bot .header_bot_menuleft {
   height: 100%;
   display: flex;
@@ -90,6 +108,7 @@ input {
   border-radius: 20px;
   margin-right: 10px;
   cursor: pointer;
+  transition: all 0.5s ease;
 }
 #header #header_bot .header_bot_menuleft #header_bot_findAMedicine span {
   position: absolute;
@@ -98,12 +117,11 @@ input {
   display: inline-block;
   transform: translateY(-50%);
 }
-#header #header_bot .header_bot_menuleft #header_bot_findAMedicine span:after {
-  content: "↓";
-  position: absolute;
-  display: inline-block;
-  left: 130px;
-  bottom: 2px;
+#header #header_bot .header_bot_menuleft #header_bot_findAMedicine:hover {
+  filter: brightness(180%);
+}
+#header #header_bot .header_bot_menuleft #header_bot_findAMedicine .fa-angle-down {
+  margin-left: 30px;
 }
 #header #header_bot .header_bot_menuleft #header_bot_getInTouch {
   background-color: #8cdb1f;
@@ -111,6 +129,10 @@ input {
   width: 155px;
   height: 50px;
   cursor: pointer;
+  transition: all 0.8s ease;
+}
+#header #header_bot .header_bot_menuleft #header_bot_getInTouch:hover {
+  background-color: #73b31a;
 }
 #header #header_bot .header_bot_menuleft #header_bot_search {
   position: relative;
@@ -126,24 +148,27 @@ input {
   top: 145px;
   width: 100%;
 }
+.container img {
+  filter: brightness(75%);
+}
 
 .sousSlider {
   position: relative;
   display: flex;
   align-items: baseline;
-  width: 80%;
+  width: 68%;
   height: 150px;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto;
   top: 80px;
   z-index: 2;
   background-color: white;
-  -webkit-box-shadow: 0px 0px 11px 0px #000000;
-  box-shadow: 0px 0px 11px 0px #000000;
+  -webkit-box-shadow: 0px 0px 39px 0px rgba(77, 77, 77, 0.37);
+  box-shadow: 0px 0px 39px 0px rgba(77, 77, 77, 0.37);
 }
 .sousSlider .sousSlider_L {
   height: 100%;
-  width: 33%;
+  flex: 1;
   padding: 30px 50px 30px 50px;
   text-align: center;
 }
@@ -162,7 +187,7 @@ input {
   border-left: 1px solid #75787a;
   border-right: 1px solid #75787a;
   height: 100%;
-  width: 33%;
+  flex: 1;
   padding: 30px 50px 30px 50px;
   text-align: center;
 }
@@ -179,7 +204,7 @@ input {
 }
 .sousSlider .sousSlider_R {
   height: 100%;
-  width: 33%;
+  flex: 1;
   padding: 30px 50px 30px 50px;
   text-align: center;
 }
@@ -197,7 +222,7 @@ input {
 
 .bgGris {
   padding-top: 80px;
-  background-color: #fafafa;
+  background-color: #f3f3f3d8;
 }
 
 .lastNews_Titre {
@@ -220,6 +245,54 @@ input {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   width: 60px;
+}
+
+.bgGris_listCards {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 50px;
+}
+.bgGris_listCards .card {
+  width: 300px;
+  height: 540px;
+  -webkit-box-shadow: 0px 0px 39px 0px rgba(77, 77, 77, 0.37);
+  box-shadow: 0px 0px 39px 0px rgba(77, 77, 77, 0.37);
+}
+.bgGris_listCards .card .titre {
+  padding-top: 30px;
+  padding-left: 30px;
+  display: block;
+  margin-bottom: 30px;
+  font-size: 14px;
+}
+.bgGris_listCards .card img {
+  width: 240px;
+  height: 180px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+.bgGris_listCards .card .card_content {
+  margin-left: 30px;
+}
+.bgGris_listCards .card .card_bot {
+  position: absolute;
+  bottom: 30px;
+  border-top: 1px solid #999c9e;
+  padding-top: 30px;
+  width: inherit;
+}
+.bgGris_listCards .card .card_bot a {
+  display: block;
+  margin-left: 30px;
+  font-size: 16px;
+}
+.bgGris_listCards .card .card_bot a::after {
+  content: "→";
+  color: #8cdb1f;
+  margin-left: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
