--- a/css/style.scss
+++ b/css/style.scss
@@ -80,11 +80,11 @@ input {
       align-items: center;
       justify-content: center;
       li {
-        color: #75787a;
         display: inline;
         text-align: center;
         padding-right: 40px;
         a {
+          color: #75787a;
           padding-bottom: 41px;
           &:hover {
             border-bottom: 3px solid #8cdb1f;
@@ -253,14 +253,17 @@ input {
   display: flex;
   position: relative;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-left: 15%;
   margin-right: 15%;
   margin-top: 50px;
   .card {
+    position: relative;
     width: 300px;
     height: 540px;
     -webkit-box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
     box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
+    margin-bottom: 20px;
     .titre {
       padding-top: 30px;
       padding-left: 30px;
@@ -331,12 +334,62 @@ input {
     width: 55%;
     margin-left: auto;
     margin-right: auto;
+
     .containt_investor_card {
       position: relative;
       width: 325px;
       height: 480px;
       padding: 25px;
-      border: 1px solid black;
+      color: #005052;
+      .investor_card_titre {
+        position: relative;
+        display: flex;
+        padding-bottom: 20px;
+        margin-bottom: 20px;
+        border-bottom: 1px solid #f6f6f6;
+        color: #6c9a9b;
+      }
+
+      .investor_card_containt {
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #f6f6f6;
+        p {
+          font-size: 16px;
+        }
+        .investor_card_date {
+          color: #bec5c9;
+        }
+        a {
+          text-decoration: underline;
+          font-size: 16px;
+        }
+        .investor_card_containt_titleInvest {
+          position: relative;
+          display: block;
+          font-size: 35px;
+          margin-bottom: 20px;
+        }
+        .investor_card_containt_investText {
+          color: #4c5f6a;
+        }
+      }
+      .investor_card_containt_update {
+        color: #bec5c9;
+        border-bottom: 1px solid #f6f6f6;
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+      }
+      .investor_card_bot {
+        a {
+          font-size: 16px;
+        }
+        &::after {
+          content: "\002192";
+          color: #8cdb1f;
+          margin-left: 5px;
+        }
+      }
     }
   }
 
@@ -347,8 +400,8 @@ input {
     input {
       background-color: #8cdb1f;
       border-radius: 30px;
-      width: 500px;
-      height: 50px;
+      width: 325px;
+      height: 45px;
       cursor: pointer;
       transition: all 0.8s ease;
       text-align: center;
@@ -357,4 +410,11 @@ input {
       }
     }
   }
+}
+
+.video {
+  display: block;
+  position: relative;
+  height: 600px;
+  background: url(/images/bg-video.jpg);
 }
